Edited wiki page C_stdlib through web user interface.

--- a/wiki/C_stdlib.wiki
+++ b/wiki/C_stdlib.wiki
@@ -9,10 +9,9 @@
 
 = Constants =
 
-{{{
-EXIT_SUCCESS - Success termination code.
-EXIT_FAILURE  - Failure termination code.
-}}}
+ * *EXIT_SUCCESS* - Success termination code.
+ * *EXIT_FAILURE* - Failure termination code.
+
 
 
 = Functions =
