Edited wiki page C_stdlib through web user interface.

--- a/wiki/C_stdlib.wiki
+++ b/wiki/C_stdlib.wiki
@@ -34,6 +34,16 @@ public function getenv( name:String ):String
 }}}
 Retrieve an environment variable.
 
+*example:* basic usage
+{{{
+import C.stdlib.*;
+
+var home:String = getenv( "HOME" );
+
+trace( "user home: " + home ); //user home: /Users/somebody
+
+}}}
+
 == setenv ==
 {{{
 public function setenv( name:String, value:String, overwrite:Boolean = false ):int
