Edited wiki page FileSystem through web user interface.

--- a/wiki/FileSystem.wiki
+++ b/wiki/FileSystem.wiki
@@ -1,4 +1,51 @@
-#summary the FileSystem API.
+#summary The File System API.
+
+<wiki:comment>
+Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
+So the rule is to document everything in the wiki page.
+Yeah it sucks because we have to sync by hand, we'll try to automate it later.
+
+on the source code file, we use only one comment
+
+/* documentation: http://code.google.com/p/redtamarin/wiki/C_stdlib */
+</wiki:comment>
+
+= About =
+Definition.
+
+*package:* {{{avmplus.*}}}
+
+*product:* redtamarin 0.3
+
+*since:* 0.3.0
+
+*references:*
+ * link1
+ * link2
+
+----
+= Properties =
+
+== name ==
+{{{
+public function get name():String
+}}}
+Definition.
+
+*since:* 0.3.0
+
+----
+= Methods =
+
+== test ==
+{{{
+public function test():void
+}}}
+Definition test.
+
+*since:* 0.3.0
+
+----
 
 == Introduction ==
 
