Edited wiki page C_unistd through web user interface.

--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -130,9 +130,9 @@ public function chmod( path:String, mode:int ):int
 Change mode of a file.
 
 *note:*<br>
-under WIN32 chmod is limited, you will only be able to set read or write at the user level
-`chmod( "myfile.txt", S_WRITE );`
-will be the same as
+under WIN32 chmod is limited, you will only be able to set read or write at the user level<br>
+`chmod( "myfile.txt", S_WRITE );`<br>
+will be the same as<br>
 `chmod( "myfile.txt", (S_IWUSR | S_IWGRP | S_IWOTH ) );`
 
 *since:* 0.3.0
