Edited wiki page C_unistd through web user interface.

--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -151,6 +151,12 @@ Suspend execution for an interval of time.
 
 
 == chdir ==
-<font color="red">missing</font>
+<font color="red">not implemented</font>
+Change working directory.
+
+
+== unlink ==
+<font color="red">not implemented</font>
+Remove a directory entry.
 
 ----
