Edited wiki page C_unistd through web user interface.

--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -151,12 +151,12 @@ Suspend execution for an interval of time.
 
 
 == chdir ==
-<font color="red">not implemented</font>
+<font color="red">not implemented</font><br>
 Change working directory.
 
 
 == unlink ==
-<font color="red">not implemented</font>
+<font color="red">not implemented</font><br>
 Remove a directory entry.
 
 ----
