Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -30,6 +30,7 @@
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
     * [ABC ActionScript Byte Code]
+    * [Security Security]
     * [Examples Examples]
     * [Tutorials Tutorials]
     * [FAQ FAQ]
