--- a/wiki/Users.wiki
+++ b/wiki/Users.wiki
@@ -38,7 +38,7 @@ Ultimately, your goal is to produce a command-line executable that you code in A
 
 === Who 's talking about it ? ===
 
-One strange thing with redtamarin is that I didn't promoted it at all and still it reached 600+ downloads.
+One strange thing with redtamarin is that I didn't promoted it much and still it reached 600+ downloads.
 
 I talk a little bit about it on twitter (you can follow me if you want [http://twitter.com/#!/zwetan @zwetan]).
 
@@ -50,3 +50,5 @@ Here some different articles and blog post mentioning redtamarin:
  * [http://labs.influxis.com/?p=598 Project Variant and a question to the community.]
  * [http://blog.48bits.com/2010/02/15/debuggeando-codigo-jiteado-de-actionscript/ Debuggeando código JITeado de ActionScript] (Debugging ActionScript JITed code)
  * [http://www.la-digitale.com/index/redtamarin Cibler Redtamarin avec Flashdevelop]
+
+Note that I'm always very interested to read or know about user stories or usage of redtamarin os if you have some not listed here you can send me an email (my username (at) gmail (dot) com).
